# home-automation

./: .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  doppler.yaml  pyproject.toml  requirements.txt  wrangler.toml
.github/workflows/: migrate.yml
launchd/: com.home-automation.json-watcher.plist  com.home-automation.pdf-watcher.plist
migrations/: 0001_documents.sql  0002_unique_filename.sql
src/home_automation/: d1.py  downstream.py  json_watcher.py  keychain.py  main.py  pdf_watcher.py  r2.py  telegram.py  watcher.py
