[project]
name = "home_automation"
version = "0.1.0"
requires-python = ">=3.11"                                                                    
dependencies = [
    "watchdog>=4.0",                                                                          
]                                                                                           
      

[project.scripts]
hom-automation = "home_automation.main:main"

[build-system]
requires = ["hatchling"]                                                                      
build-backend = "hatchling.build"
