[project]
name = "home-automation"
version = "0.1.0"
requires-python = ">=3.11"                                                                    
dependencies = [
    "watchdog>=4.0",
    "cloudflare>=4.3",
    "boto3>=1.34",
    "requests>=2.31"
]                                                                                           
      

[project.scripts]
home-automation = "home_automation.main:main"

[build-system]
requires = ["hatchling"]                                                                      
build-backend = "hatchling.build"
